--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "react-router-dom": "^6.8.0",
+    "axios": "^1.4.0",
+    "react-query": "^3.39.0",
+    "react-hook-form": "^7.43.0",
+    "react-hot-toast": "^2.4.0",
+    "lucide-react": "^0.263.0",
+    "clsx": "^1.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   },
   "browserslist": {
     "production": [
