--- a/client/package.json
+++ b/client/package.json
@@ -9,19 +9,25 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "axios": "^1.4.0",
+    "clsx": "^1.2.0",
+    "lucide-react": "^0.263.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.4.0",
-    "react-query": "^3.39.0",
     "react-hook-form": "^7.43.0",
     "react-hot-toast": "^2.4.0",
-    "lucide-react": "^0.263.0",
-    "clsx": "^1.2.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-query": "^3.39.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "react-window": "^1.8.11",
+    "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.3.0",
+    "web-vitals": "^3.5.2",
+    "workbox-webpack-plugin": "^6.5.0"
   },
   "browserslist": {
     "production": [
