--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "autoprefixer": "^10.4.0",
     "axios": "^1.4.0",
-    "clsx": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^1.2.1",
     "lucide-react": "^0.263.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
@@ -25,6 +34,7 @@
     "react-window": "^1.8.11",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0",
     "web-vitals": "^3.5.2",
     "workbox-webpack-plugin": "^6.5.0"
