--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate",
+    "build": "prisma generate --schema=./prisma/schema.prisma",
+    "db:generate": "prisma generate --schema=./prisma/schema.prisma",
+    "db:push": "prisma db push --schema=./prisma/schema.prisma",
+    "db:migrate": "prisma migrate dev --schema=./prisma/schema.prisma",
     "db:seed": "node utils/seed.js"
   },
   "dependencies": {
